<resources>
    <string name="app_name" translatable="false">Toolkit Tiles</string>
    <string name="about_description">Simple, lightweight Quick Settings tiles that give you instant access to useful features without extra apps</string>
    <string name="about_version">Version %s</string>
    <string name="about_wstxda" translatable="false">WSTxda</string>
    <string name="about_developer">Developer</string>
    <string name="about_github" translatable="false">Github</string>
    <string name="about_repository">Source code repository</string>
    <string name="about_license">Licence</string>
    <string name="about_license_summary">Apache License 2.0</string>
    <string name="about_used_library">Libraries</string>
    <string name="about_used_library_summary">Open source licenses</string>
    <string name="updater_title">New update available!</string>
    <string name="updater_version">Version %s</string>
    <string name="updater_no_update_message">No update available</string>
    <string name="updater_no_internet_message">No internet connection</string>
    <string name="updater_generic_error_message">Something went wrong. Please try again later</string>
    <string name="updater_download_button">Download</string>
    <string name="updater_github_button">Open in GitHub</string>
    <string name="free_android_warn_title">Important information</string>
    <string name="free_android_warn_message">Google has announced that, starting in 2026/2027, all apps on certified Android devices will require the developer to submit personal identity details directly to Google. Since the developers of this app do not agree to this requirement, this app will no longer work on certified Android devices after that time.</string>
    <string name="free_android_warn_link"><u>More info</u></string>
    <string name="free_android_warn_solution_button">Solution</string>
    <string name="channel_name">Tiles services</string>
    <string name="notification_title">Service running</string>
    <string name="notification_label">A tile is running, disable the tile in the quick settings panel or tap here to hide this notification</string>
    <string name="accessibility_service_description">This application uses accessibility services so that some of its tiles in the quick settings panel work. This permission is essential for these tiles to work correctly and provide quick access to certain device features.</string>
    <string name="accessibility_permission_message">Accessibility permission required. Please enable it first</string>
    <string name="dnd_access_permission_message">Do Not Disturb access permission required. Please enable it first</string>
    <string name="write_settings_permission_message">Write system settings permission required. Please enable it first</string>
    <string name="write_secure_settings_clipboard_message">Command copied to clipboard</string>
    <string name="write_secure_settings_title">ADB permission required</string>
    <string name="write_secure_settings_message">This feature requires the WRITE_SECURE_SETTINGS permission, which can only be granted via ADB. Run the command below in your terminal with USB debugging enabled:</string>
    <string name="write_secure_settings_support">After running the command, tap the tile again to enable it. You only need to do this once.</string>
    <string name="copy_clipboard">Copy to clipboard</string>
    <string name="close">Close</string>
    <string name="not_supported">Your device does not support this feature</string>
    <string name="clipboard_cleared">Clipboard cleared</string>
    <string name="google_not_found">Music search activity not found. Please install or enable Google App</string>
    <string name="tile_on">On</string>
    <string name="tile_off">Off</string>
    <string name="tile_open">Tap to open</string>
    <string name="tile_start">Tap to start</string>
    <string name="tile_setup">Tap to setup</string>
    <string name="tile_switch">Tap to switch</string>
    <string name="tile_unavailable">Unavailable</string>
    <string name="tile_not_supported">Not supported</string>
    <string name="compass_tile">Compass</string>
    <string name="compass_tile_degrees" translatable="false">%1$d° %2$s</string>
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    <string name="level_tile">Level</string>
    <string name="level_tile_degrees" translatable="false">%d°</string>
    <string name="level_tile_zero" translatable="false">0°</string>
    <string name="lux_meter_tile">Lux Meter</string>
    <string name="lux_meter_tile_lux" translatable="false">%d lx</string>
    <string name="lock_tile">Lock</string>
    <string name="coin_flip_tile">Coin Flip</string>
    <string name="coin_flip_tile_tap">Tap to flip</string>
    <string name="coin_tile_heads">Heads</string>
    <string name="coin_tile_tails">Tails</string>
    <string name="coin_flip_tile_count">Heads: %1$d Tails: %2$d</string>
    <string name="dice_roll_tile">Dice Roll</string>
    <string name="dice_roll_tile_tap">Tap to roll</string>
    <string name="dice_roll_tile_rolling">Rolling…</string>
    <string name="dice_tile_1">One</string>
    <string name="dice_tile_2">Two</string>
    <string name="dice_tile_3">Three</string>
    <string name="dice_tile_4">Four</string>
    <string name="dice_tile_5">Five</string>
    <string name="dice_tile_6">Six</string>
    <string name="sos_tile">SOS</string>
    <string name="counter_tile">Counter</string>
    <string name="counter_tile_add">Add</string>
    <string name="counter_tile_remove">Remove</string>
    <string name="counter_tile_reset">Reset</string>
    <string name="screenshot_tile">Screenshot</string>
    <string name="sound_mode_tile">Sound mode</string>
    <string name="sound_tile_normal">Normal</string>
    <string name="sound_tile_silent">Silent</string>
    <string name="sound_tile_vibrate">Vibrate</string>
    <string name="caffeine_tile">Caffeine</string>
    <string name="caffeine_tile_minutes">%1$d minutes</string>
    <string name="caffeine_tile_infinite">Infinite</string>
    <string name="memory_tile">Memory</string>
    <string name="memory_tile_format">%1$s of %2$s</string>
    <string name="memory_tile_ram">%s in use</string>
    <string name="memory_tile_storage">%s free</string>
    <string name="temperature_tile">Temperature</string>
    <string name="temperature_tile_format" translatable="false">%.1f°C</string>
    <string name="media_output_tile">Media output</string>
    <string name="auto_brightness_tile">Auto brightness</string>
    <string name="breathing_tile">Breathe</string>
    <string name="breathing_tile_prepare">Follow the circle</string>
    <string name="breathing_tile_inhale">Inhale</string>
    <string name="breathing_tile_exhale">Exhale</string>
    <string name="breathing_tile_pause">Pause</string>
    <string name="breathing_tile_relax">Relax</string>
    <string name="network_traffic_tile">Network</string>
    <string name="network_traffic_tile_kb" translatable="false">%.1f kB</string>
    <string name="network_traffic_tile_mb" translatable="false">%.1f MB</string>
    <string name="network_traffic_tile_download">Download</string>
    <string name="network_traffic_tile_upload">Upload</string>
    <string name="battery_tile">Battery</string>
    <string name="battery_tile_percent" translatable="false">%d%%</string>
    <string name="battery_tile_voltage" translatable="false">%.2f V</string>
    <string name="battery_tile_current" translatable="false">%d mA</string>
    <string name="battery_tile_wattage" translatable="false">%.1f W</string>
    <string name="battery_tile_temperature" translatable="false">%.1f°C</string>
    <string name="battery_tile_status_full">Fully charged</string>
    <string name="battery_tile_status_low">Low battery</string>
    <string name="battery_tile_status_saver">Power saver</string>
    <string name="battery_tile_status_discharging">Discharging</string>
    <string name="battery_tile_charging">Charging</string>
    <string name="battery_tile_charging_ac">Charging · AC</string>
    <string name="battery_tile_charging_usb">Charging · USB</string>
    <string name="battery_tile_charging_wireless">Charging · Wireless</string>
    <string name="battery_tile_charging_dock">Charging · Dock</string>
    <string name="battery_tile_health_good">Good</string>
    <string name="battery_tile_health_overheat">Overheating</string>
    <string name="battery_tile_health_dead">Dead</string>
    <string name="battery_tile_health_overvoltage">Overvoltage</string>
    <string name="battery_tile_health_failure">Failure</string>
    <string name="battery_tile_health_cold">Cold</string>
    <string name="battery_tile_health_unknown">Unknown</string>
    <string name="dns_tile">DNS</string>
    <string name="dns_tile_automatic">Automatic</string>
    <string name="dns_tile_provider_block_adult_content">Block adult content</string>
    <string name="dns_tile_provider_google" translatable="false">Google</string>
    <string name="dns_tile_provider_cloudflare" translatable="false">Cloudflare</string>
    <string name="dns_tile_provider_adguard" translatable="false">AdGuard</string>
    <string name="dns_tile_provider_opendns" translatable="false">OpenDNS</string>
    <string name="dns_tile_provider_quad9" translatable="false">Quad9</string>
    <string name="dns_tile_provider_nextdns" translatable="false">NextDNS</string>
    <string name="dns_tile_provider_mullvad" translatable="false">Mullvad</string>
    <string name="dns_tile_provider_controld" translatable="false">Control D</string>
    <string name="dns_tile_provider_libredns" translatable="false">LibreDNS</string>
    <string name="usb_debugging_tile">USB debugging</string>
    <string name="nfc_tile">NFC</string>
    <string name="power_tile">Power menu</string>
    <string name="volume_tile">Volume</string>
    <string name="clipboard_tile">Clipboard</string>
    <string name="clipboard_tile_tap">Tap to clear</string>
    <string name="music_search_tile">Music search</string>
</resources>