<!--
  ~ Copyright (©) 2026 Mihai-Cristian Condrea
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fitsSystemWindows="false"
    android:orientation="vertical">

    <com.google.android.material.bottomsheet.BottomSheetDragHandleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/dialog_title"
        style="?attr/textAppearanceHeadlineSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoSizeMaxTextSize="24sp"
        android:autoSizeMinTextSize="20sp"
        android:autoSizeStepGranularity="2sp"
        android:autoSizeTextType="uniform"
        android:maxLines="4"
        android:paddingHorizontal="14dp"
        android:paddingBottom="16dp"
        android:textAlignment="center"
        tools:text="@string/write_secure_settings_title" />

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_top"
        style="?attr/materialDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        app:dividerColor="@color/divider_color"
        app:dividerThickness="1dp"
        tools:visibility="visible" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialog_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?attr/dialogPreferredPadding"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="?attr/dialogPreferredPadding"
                android:textAppearance="?attr/textAppearanceBodyMedium"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/write_secure_settings_message" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/dialog_card_adb_command"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?attr/dialogPreferredPadding"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="?attr/dialogPreferredPadding"
                app:cardBackgroundColor="?attr/colorSurfaceContainerHighest"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_message"
                app:strokeColor="?attr/colorOutline">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/dialog_adb_command"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="monospace"
                    android:padding="12dp"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?attr/colorOnSurface"
                    android:textIsSelectable="true"
                    tools:text="adb shell pm grant com.wstxda.toolkit android.permission.WRITE_SECURE_SETTINGS" />
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/dialog_warning_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="?attr/dialogPreferredPadding"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="?attr/dialogPreferredPadding"
                android:drawableStart="@drawable/ic_info"
                android:drawablePadding="8dp"
                android:drawableTint="?attr/colorOnSurfaceVariant"
                android:textAppearance="?attr/textAppearanceBodySmall"
                android:textColor="?attr/colorOnSurfaceVariant"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialog_card_adb_command"
                tools:text="@string/write_secure_settings_support" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.divider.MaterialDivider
        android:id="@+id/divider_bottom"
        style="?attr/materialDividerStyle"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="gone"
        app:dividerColor="@color/divider_color"
        app:dividerThickness="1dp"
        tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_button_negative"
            style="@style/Widget.Material3Expressive.Button.TonalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="?attr/dialogPreferredPadding"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/dialog_button_positive"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/close" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dialog_button_positive"
            style="@style/Widget.Material3Expressive.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="?attr/dialogPreferredPadding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dialog_button_negative"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/copy_clipboard" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.appcompat.widget.LinearLayoutCompat>